<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F4ED">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="#5B3A3A"
            android:padding="12dp"
            android:text="@string/design_virtually_title"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <!-- Sketch Image -->
        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sketch"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/img_main" />

        <!-- Button 1 -->
        <Button
            android:id="@+id/takePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:backgroundTint="#D9C4A1"
            android:textColor="#000000"
            android:layout_marginBottom="12dp" />

        <!-- Button 2 -->
        <Button
            android:id="@+id/seeSketchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_sketch"
            android:backgroundTint="#D9C4A1"
            android:textColor="#000000"
            android:layout_marginBottom="12dp" />

        <!-- Button 3 -->
        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:backgroundTint="#D9C4A1"
            android:textColor="#000000" />

    </LinearLayout>
</ScrollView>
